# AIVOA.Ai-Assesment

./: README.md
backend assesment/: main.py  pyproject.toml
backend assesment/app/: main.py
backend assesment/app/agent/: graph.py  llm.py  tools.py
backend assesment/app/core/: config.py
backend assesment/app/db/: session.py  test_connection.py
backend assesment/app/models/: __init__.py  followUp_model.py  hcp_model.py  intraction_model.py
backend assesment/test/: create_table.py
crm-backend/app/: main.py
crm-backend/app/agent/: llm.py  tools.py
crm-backend/app/core/: config.py
crm-backend/app/db/: base.py  session.py
crm-backend/app/schema/: input_schema.py
crm-backend/test/: test_log_interaction.py
crm-frontend/: .gitignore  package-lock.json  package.json  vite.config.js
crm-frontend/src/: App.css  App.jsx  main.jsx
crm-frontend/src/components/: ChatInput.jsx  ChatPannel.jsx  InteractionForm.jsx  MessageBubble.jsx  NavBar.jsx
crm-frontend/src/lib/: api.js
crm-frontend/src/store/: chatSlice.js  form_slice.js  store.js
